// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SalesforceConfigurationStatus should render 1`] = `
<div>
  <div
    class="settings-base-page-root data-source-base-page-root"
  >
    <div
      class="maintenance-alert-root"
    />
    <ol
      class="breadcrumb breadcrumbs-root"
    >
      <li
        class="breadcrumb-item"
      >
        <a
          class="breadcrumb-text-truncate breadcrumb-link"
          href="/workspace/23/settings/data-source"
        >
          Data Sources
        </a>
      </li>
      <li
        class="breadcrumb-item"
      >
        <button
          class="breadcrumb-text-truncate btn btn-unstyled"
          type="button"
        >
          Liferay23
        </button>
      </li>
      <li
        class="breadcrumb-item active"
      >
        <span
          class="breadcrumb-text-truncate"
        >
          Configuration Status
        </span>
      </li>
    </ol>
    <div
      class="content-header"
    >
      <div
        class="header-text"
      >
        <div
          class="d-flex"
        >
          <h3
            class="title-text text-truncate"
          >
            <span
              class="text-truncate"
              data-tooltip="false"
              title=""
            >
              Configure Salesforce
            </span>
          </h3>
        </div>
        <div
          class="description"
        >
          Liferay23 - https://www.faro-23.io
        </div>
      </div>
      <div
        class="page-actions-container"
      />
    </div>
    <div>
      <div
        class="page-container"
      >
        <div
          class="content-main"
        >
          <div
            class="sheet data-source-base-tabs-root page-display"
          >
            <div
              class="sheet-body"
            >
              <ul
                class="nav-root nav nav-underline"
                role="tablist"
              >
                <li
                  class="nav-item"
                  role="presentation"
                >
                  <a
                    class="nav-link"
                    href="/workspace/23/settings/data-source/23"
                    role="tab"
                  >
                    <div
                      class="h4"
                    >
                      Authorization
                    </div>
                  </a>
                </li>
                <li
                  class="nav-item active"
                  role="presentation"
                >
                  <a
                    class="nav-link active"
                    href="/workspace/23/settings/data-source/23/salesforce/configuration-status"
                    role="tab"
                  >
                    <div
                      class="h4"
                    >
                      Configure Data Source
                    </div>
                  </a>
                </li>
              </ul>
            </div>
            <div
              class="sheet-body"
            >
              <div
                class="configuration-overview-root"
              >
                <h3
                  class="sheet-subtitle"
                >
                  Data Configuration
                </h3>
                <div
                  class="base-configuration-item-root"
                >
                  <div
                    class="actions"
                  >
                    <a
                      class="button-root btn btn-block btn-secondary"
                      display="secondary"
                      href="/workspace/23/settings/data-source/23/salesforce/field-mapping/accounts"
                    >
                      View
                    </a>
                  </div>
                  <div
                    class="info"
                  >
                    <div
                      class="title"
                    >
                      <b>
                        Accounts
                      </b>
                    </div>
                    <div
                      class="text-secondary"
                    >
                      <div
                        class="description"
                      >
                        Represents an organization or person involved with your business.
                      </div>
                      
                    </div>
                  </div>
                </div>
                <div
                  class="base-configuration-item-root"
                >
                  <div
                    class="actions"
                  >
                    <a
                      class="button-root btn btn-block btn-secondary"
                      display="secondary"
                      href="/workspace/23/settings/data-source/23/salesforce/field-mapping/individuals"
                    >
                      View
                    </a>
                  </div>
                  <div
                    class="info"
                  >
                    <div
                      class="title"
                    >
                      <b>
                        Individuals
                      </b>
                    </div>
                    <div
                      class="text-secondary"
                    >
                      <div
                        class="description"
                      >
                        Represented by a contact or lead within Salesforce.
                      </div>
                      
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="content-side"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`SalesforceConfigurationStatus should render already configured items with the button text "pause" instead of "enable" 1`] = `
<div>
  <div
    class="settings-base-page-root data-source-base-page-root"
  >
    <div
      class="maintenance-alert-root"
    />
    <ol
      class="breadcrumb breadcrumbs-root"
    >
      <li
        class="breadcrumb-item"
      >
        <a
          class="breadcrumb-text-truncate breadcrumb-link"
          href="/workspace/23/settings/data-source"
        >
          Data Sources
        </a>
      </li>
      <li
        class="breadcrumb-item"
      >
        <button
          class="breadcrumb-text-truncate btn btn-unstyled"
          type="button"
        >
          Liferay23
        </button>
      </li>
      <li
        class="breadcrumb-item active"
      >
        <span
          class="breadcrumb-text-truncate"
        >
          Configuration Status
        </span>
      </li>
    </ol>
    <div
      class="content-header"
    >
      <div
        class="header-text"
      >
        <div
          class="d-flex"
        >
          <h3
            class="title-text text-truncate"
          >
            <span
              class="text-truncate"
              data-tooltip="false"
              title=""
            >
              Configure Salesforce
            </span>
          </h3>
        </div>
        <div
          class="description"
        >
          Liferay23 - https://www.faro-23.io
        </div>
      </div>
      <div
        class="page-actions-container"
      />
    </div>
    <div>
      <div
        class="page-container"
      >
        <div
          class="content-main"
        >
          <div
            class="sheet data-source-base-tabs-root page-display"
          >
            <div
              class="sheet-body"
            >
              <ul
                class="nav-root nav nav-underline"
                role="tablist"
              >
                <li
                  class="nav-item"
                  role="presentation"
                >
                  <a
                    class="nav-link"
                    href="/workspace/23/settings/data-source/23"
                    role="tab"
                  >
                    <div
                      class="h4"
                    >
                      Authorization
                    </div>
                  </a>
                </li>
                <li
                  class="nav-item active"
                  role="presentation"
                >
                  <a
                    class="nav-link active"
                    href="/workspace/23/settings/data-source/23/salesforce/configuration-status"
                    role="tab"
                  >
                    <div
                      class="h4"
                    >
                      Configure Data Source
                    </div>
                  </a>
                </li>
              </ul>
            </div>
            <div
              class="sheet-body"
            >
              <div
                class="configuration-overview-root"
              >
                <h3
                  class="sheet-subtitle"
                >
                  Data Configuration
                </h3>
                <div
                  class="base-configuration-item-root"
                >
                  <div
                    class="actions"
                  >
                    <a
                      class="button-root btn btn-block btn-secondary"
                      display="secondary"
                      href="/workspace/23/settings/data-source/23/salesforce/field-mapping/accounts"
                    >
                      View
                    </a>
                  </div>
                  <div
                    class="info"
                  >
                    <div
                      class="title"
                    >
                      <b>
                        Accounts
                      </b>
                    </div>
                    <div
                      class="text-secondary"
                    >
                      <div
                        class="description"
                      >
                        Represents an organization or person involved with your business.
                      </div>
                      
                    </div>
                  </div>
                </div>
                <div
                  class="base-configuration-item-root"
                >
                  <div
                    class="actions"
                  >
                    <a
                      class="button-root btn btn-block btn-secondary"
                      display="secondary"
                      href="/workspace/23/settings/data-source/23/salesforce/field-mapping/individuals"
                    >
                      View
                    </a>
                  </div>
                  <div
                    class="info"
                  >
                    <div
                      class="title"
                    >
                      <b>
                        Individuals
                      </b>
                    </div>
                    <div
                      class="text-secondary"
                    >
                      <div
                        class="description"
                      >
                        Represented by a contact or lead within Salesforce.
                      </div>
                      
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="content-side"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`SalesforceConfigurationStatus should render as configuring items with a metric bar instead of a button 1`] = `
<div>
  <div
    class="settings-base-page-root data-source-base-page-root"
  >
    <div
      class="maintenance-alert-root"
    />
    <ol
      class="breadcrumb breadcrumbs-root"
    >
      <li
        class="breadcrumb-item"
      >
        <a
          class="breadcrumb-text-truncate breadcrumb-link"
          href="/workspace/23/settings/data-source"
        >
          Data Sources
        </a>
      </li>
      <li
        class="breadcrumb-item"
      >
        <button
          class="breadcrumb-text-truncate btn btn-unstyled"
          type="button"
        >
          Liferay23
        </button>
      </li>
      <li
        class="breadcrumb-item active"
      >
        <span
          class="breadcrumb-text-truncate"
        >
          Configuration Status
        </span>
      </li>
    </ol>
    <div
      class="content-header"
    >
      <div
        class="header-text"
      >
        <div
          class="d-flex"
        >
          <h3
            class="title-text text-truncate"
          >
            <span
              class="text-truncate"
              data-tooltip="false"
              title=""
            >
              Configure Salesforce
            </span>
          </h3>
        </div>
        <div
          class="description"
        >
          Liferay23 - https://www.faro-23.io
        </div>
      </div>
      <div
        class="page-actions-container"
      />
    </div>
    <div>
      <div
        class="page-container"
      >
        <div
          class="content-main"
        >
          <div
            class="sheet data-source-base-tabs-root page-display"
          >
            <div
              class="sheet-body"
            >
              <ul
                class="nav-root nav nav-underline"
                role="tablist"
              >
                <li
                  class="nav-item"
                  role="presentation"
                >
                  <a
                    class="nav-link"
                    href="/workspace/23/settings/data-source/23"
                    role="tab"
                  >
                    <div
                      class="h4"
                    >
                      Authorization
                    </div>
                  </a>
                </li>
                <li
                  class="nav-item active"
                  role="presentation"
                >
                  <a
                    class="nav-link active"
                    href="/workspace/23/settings/data-source/23/salesforce/configuration-status"
                    role="tab"
                  >
                    <div
                      class="h4"
                    >
                      Configure Data Source
                    </div>
                    <span
                      class="badge badge-primary ml-2"
                    >
                      <span
                        class="badge-item badge-item-expand"
                      >
                        2
                      </span>
                    </span>
                  </a>
                </li>
              </ul>
            </div>
            <div
              class="sheet-body"
            >
              <div
                class="configuration-overview-root"
              >
                <h3
                  class="sheet-subtitle"
                >
                  Data Configuration
                </h3>
                <div
                  class="base-configuration-item-root"
                >
                  <div
                    class="actions"
                  >
                    <a
                      class="button-root btn btn-block btn-secondary"
                      display="secondary"
                      href="/workspace/23/settings/data-source/23/salesforce/field-mapping/accounts"
                    >
                      View
                    </a>
                  </div>
                  <div
                    class="info"
                  >
                    <div
                      class="title"
                    >
                      <b>
                        Accounts
                      </b>
                    </div>
                    <div
                      class="text-secondary"
                    >
                      <div
                        class="description"
                      >
                        Represents an organization or person involved with your business.
                      </div>
                      
                    </div>
                  </div>
                </div>
                <div
                  class="base-configuration-item-root"
                >
                  <div
                    class="actions"
                  >
                    <a
                      class="button-root btn btn-block btn-secondary"
                      display="secondary"
                      href="/workspace/23/settings/data-source/23/salesforce/field-mapping/individuals"
                    >
                      View
                    </a>
                  </div>
                  <div
                    class="info"
                  >
                    <div
                      class="title"
                    >
                      <b>
                        Individuals
                      </b>
                    </div>
                    <div
                      class="text-secondary"
                    >
                      <div
                        class="description"
                      >
                        Represented by a contact or lead within Salesforce.
                      </div>
                      
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="content-side"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`SalesforceConfigurationStatus should render as read-only if the user is not authorized to make changes 1`] = `
<div>
  <div
    class="settings-base-page-root data-source-base-page-root"
  >
    <div
      class="maintenance-alert-root"
    />
    <ol
      class="breadcrumb breadcrumbs-root"
    >
      <li
        class="breadcrumb-item"
      >
        <a
          class="breadcrumb-text-truncate breadcrumb-link"
          href="/workspace/23/settings/data-source"
        >
          Data Sources
        </a>
      </li>
      <li
        class="breadcrumb-item"
      >
        <button
          class="breadcrumb-text-truncate btn btn-unstyled"
          type="button"
        >
          Liferay23
        </button>
      </li>
      <li
        class="breadcrumb-item active"
      >
        <span
          class="breadcrumb-text-truncate"
        >
          Configuration Status
        </span>
      </li>
    </ol>
    <div
      class="content-header"
    >
      <div
        class="header-text"
      >
        <div
          class="d-flex"
        >
          <h3
            class="title-text text-truncate"
          >
            <span
              class="text-truncate"
              data-tooltip="false"
              title=""
            >
              Configure Salesforce
            </span>
          </h3>
        </div>
        <div
          class="description"
        >
          Liferay23 - https://www.faro-23.io
        </div>
      </div>
      <div
        class="page-actions-container"
      />
    </div>
    <div>
      <div
        class="page-container"
      >
        <div
          class="content-main"
        >
          <div
            class="sheet data-source-base-tabs-root page-display"
          >
            <div
              class="sheet-body"
            >
              <ul
                class="nav-root nav nav-underline"
                role="tablist"
              >
                <li
                  class="nav-item"
                  role="presentation"
                >
                  <a
                    class="nav-link"
                    href="/workspace/23/settings/data-source/23"
                    role="tab"
                  >
                    <div
                      class="h4"
                    >
                      Authorization
                    </div>
                  </a>
                </li>
                <li
                  class="nav-item active"
                  role="presentation"
                >
                  <a
                    class="nav-link active"
                    href="/workspace/23/settings/data-source/23/salesforce/configuration-status"
                    role="tab"
                  >
                    <div
                      class="h4"
                    >
                      Configure Data Source
                    </div>
                  </a>
                </li>
              </ul>
            </div>
            <div
              class="sheet-body"
            >
              <div
                class="configuration-overview-root"
              >
                <h3
                  class="sheet-subtitle"
                >
                  Data Configuration
                </h3>
                <div
                  class="base-configuration-item-root"
                >
                  <div
                    class="actions"
                  >
                    <a
                      class="button-root link-disabled btn btn-block btn-secondary"
                      display="secondary"
                    >
                      View
                    </a>
                  </div>
                  <div
                    class="info"
                  >
                    <div
                      class="title"
                    >
                      <b>
                        Accounts
                      </b>
                    </div>
                    <div
                      class="text-secondary"
                    >
                      <div
                        class="description"
                      >
                        Represents an organization or person involved with your business.
                      </div>
                      
                    </div>
                  </div>
                </div>
                <div
                  class="base-configuration-item-root"
                >
                  <div
                    class="actions"
                  >
                    <a
                      class="button-root link-disabled btn btn-block btn-secondary"
                      display="secondary"
                    >
                      View
                    </a>
                  </div>
                  <div
                    class="info"
                  >
                    <div
                      class="title"
                    >
                      <b>
                        Individuals
                      </b>
                    </div>
                    <div
                      class="text-secondary"
                    >
                      <div
                        class="description"
                      >
                        Represented by a contact or lead within Salesforce.
                      </div>
                      
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="content-side"
        />
      </div>
    </div>
  </div>
</div>
`;
